@@ -1,8 +1,8 @@
-// generated 2002/12/9 7:53:24 CET by thoma@Tiger.(none)
+// generated 2002/12/9 14:20:02 CET by thoma@Tiger.(none)
 // using glademm V1.1.2a_cvs
 //
 // DO NOT EDIT THIS FILE ! It was created using
-// glade-- /home/thoma/Berlios/heatload/heatload.glade
+// glade-- /home/thoma/Berlios/deb/heatload-0.3/heatload.glade
 // for gtk 1.2.10 and gtkmm 1.2.10
 //
 // Please modify the corresponding derived classes in ./src/gtk_acpi.cc
@@ -120,6 +120,7 @@ gtk_acpi_glade::gtk_acpi_glade(
    frame_draw->show();
    table1->show();
    gtk_acpi->show();
+   gtk_acpi->delete_event.connect(SigC::slot(this, &gtk_acpi_glade::on_gtk_acpi_delete_event));
 }
 
 gtk_acpi_glade::~gtk_acpi_glade()
