@@ -1,8 +1,8 @@
-// generated 2002/12/9 7:53:24 CET by thoma@Tiger.(none)
+// generated 2002/12/9 14:20:02 CET by thoma@Tiger.(none)
 // using glademm V1.1.2a_cvs
 //
 // DO NOT EDIT THIS FILE ! It was created using
-// glade-- /home/thoma/Berlios/heatload/heatload.glade
+// glade-- /home/thoma/Berlios/deb/heatload-0.3/heatload.glade
 // for gtk 1.2.10 and gtkmm 1.2.10
 //
 // Please modify the corresponding derived classes in ./src/gtk_acpi.hh and./src/gtk_acpi.cc
@@ -35,5 +35,7 @@ protected:
         gtk_acpi_glade();
         
         ~gtk_acpi_glade();
+private:
+        virtual gint on_gtk_acpi_delete_event(GdkEventAny *ev) = 0;
 };
 #endif
