@@ -52,3 +52,6 @@
 
 2002/12/9 7:53:24 CET
 	update files from .glade file
+
+2002/12/9 14:20:02 CET
+	update files from .glade file
